not one spoller

--- a/index.html
+++ b/index.html
@@ -77,11 +77,7 @@
                 </div>
               </div>
               <div class="question__body">
-                <div
-                  data-spollers
-                  data-one-spoller
-                  class="question__block block"
-                >
+                <div data-spollers class="question__block block">
                   <div class="block__item">
                     <button
                       tabindex="-1"
